# ceph_fleet_update

./: .travis.yml  Cargo.toml  README.md  architecture.md  build-release.sh
api/protos/: service.proto
src/: apt.rs  ceph_upgrade.rs  errors.rs  main.rs
