[package]
name = "skynet"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
license = "MIT"

[dependencies]
api = { path = "api" }
apt-pkg-native = "*"
ceph = {git = "https://github.com/cholcombe973/ceph-rust" } #"~0.1"
clap = "*"
chrono = { version = "~0.4", features = ["rustc-serialize"] }
debian = {git = "https://github.com/mwanner/rust-debian" }
dns-lookup = "*"
error-chain = "0.10.0"
ifaces = "*"
init-daemon = "*"
log = {version = "0.3.6", features = ["release_max_level_info"] }
nix = "*"
os_type = "1.0.0"
protobuf = "*"
rand = "~0.3"
regex = "*"
reqwest = "~0.8"
rust-ini = "*"
semver = "*"
simplelog = "*"
slack-hook = "*"
users = "*"
uuid = { version = "^0.4", features = ["v4"] }
walkdir = "*"
zmq = "*"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
